--- a/index.html
+++ b/index.html
@@ -6,8 +6,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Argentina Programa 4.0 - Proyecto Final</title>
     <link href="CSS/styles.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
 <body class="bg">
+    <div class="container text-center">
+        <div class="row">
+            <div class="col-4">
+                <img src="" id="imagenPerfil" alt="Error al cargar la imagen de perfil."/>
+            </div>
+            <div class="col-8">
+                Datos de perfil
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-4">
+                Experiencia
+            </div>
+            <div class="col-8">
+                ...
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-4">
+                Habilidades
+            </div>
+            <div class="col-8">
+                ...
+            </div>
+        </div>
+    </div>
+
     <script src="JS/js.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
