--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
             <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Información Personal</a>
+                    <a class="nav-link" id="btnInfo">Información Personal</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Experiencia </a>
+                    <a class="nav-link" id="btnExperiencia">Experiencia </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Habilidades</a>
+                    <a class="nav-link" id="btnHabilidades">Habilidades</a>
                 </li>
             </ul>
             </div>
         </div>
     </nav>
-    <div class="container">       
+    <div class="container" id="informacion_personal">       
         <div class="row">
             <div class="col-5 text-center">
                 <img src="" id="imagenPerfil" alt="Error al cargar la imagen de perfil."/>
@@ -59,7 +59,7 @@
 
             </div>
         </div>
-        <div class="row">
+        <div class="row" id="experiencia">
             <div class="col-5 text-center">
                 Experiencia
             </div>
@@ -67,7 +67,7 @@
                 ...
             </div>
         </div>
-        <div class="row">
+        <div class="row" id="habilidades">
             <div class="col-5 text-center">
                 Habilidades
             </div>
@@ -78,6 +78,7 @@
     </div>
 
     <script src="JS/js.js"></script>
+    <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
